--- a/ui/src/components/ListTemplate.css
+++ b/ui/src/components/ListTemplate.css
@@ -1,8 +1,9 @@
 .list-template {
   background: white;
-  width: 640px;
-  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23); /* 그림자 */
-  margin: 0 auto; /* 페이지 중앙 정렬 */
+  min-width: 320px;
+  max-width: 640px;
+  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+  margin: 0 auto;
   margin-top: 4rem;
 }
 
